@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4206 2003/12/21 03:51:02 ben Exp $
+$NetBSD: CHANGES,v 1.4207 2003/12/21 04:56:15 uebayasi Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -5267,3 +5267,4 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated rapidsvn to 0.4.0nb1 [epg 2003-12-20]
 	Updated mgetty to 1.1.30nb1 [fredb 2003-12-20]
 	Removed wx1Motif [ben 2003-12-20]
+	Updated lv to 4.50 [uebayasi 2003-12-21]
